# test-notebook

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh  test_notebook.ipynb
.ipynb_checkpoints/: test_notebook-checkpoint.ipynb
odd_even_classifier/: __init__.py  classifier.py
odd_even_classifier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
